# exagent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
exagent/: __init__.py  agent.py  model.py  shell.py  tool.py  types.py  utils.py
exagent/multi_agent/orchestrator/: agent.py
exagent/providers/: __init__.py  anthropic.py  openai.py  provider.py  utils.py
exagnet/: main.py
